// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`hena CLI help-text snapshots every documented command emits stable help text: hena acp --help 1`] = `
"hena acp

start ACP (Agent Client Protocol) server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: hena.local)
                                                                    [string] [default: "hena.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
      --cwd          working directory [string] [default: "<HOME>"]"
`;

exports[`hena CLI help-text snapshots every documented command emits stable help text: hena mcp --help 1`] = `
"hena mcp

manage MCP (Model Context Protocol) servers

Commands:
  hena mcp add [name]     add an MCP server
  hena mcp list           list MCP servers and their status                            [aliases: ls]
  hena mcp auth [name]    authenticate with an OAuth-enabled MCP server
  hena mcp logout [name]  remove OAuth credentials for an MCP server
  hena mcp debug <name>   debug OAuth connection for an MCP server

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`hena CLI help-text snapshots every documented command emits stable help text: hena run --help 1`] = `
"hena run [message..]

run Hena with a message

Positionals:
  message  message to send                                                     [array] [default: []]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --command     the command to run, use message for args                                [string]
  -c, --continue    continue the last session                                              [boolean]
  -s, --session     session id to continue                                                  [string]
      --fork        fork the session before continuing (requires --continue or --session)  [boolean]
      --share       share the session                                                      [boolean]
  -m, --model       model to use in the format of provider/model                            [string]
      --agent       agent to use                                                            [string]
      --format      format: default (formatted) or json (raw JSON events)
                                          [string] [choices: "default", "json"] [default: "default"]
  -f, --file        file(s) to attach to message                                             [array]
      --title       title for the session (uses truncated prompt if no value provided)      [string]
      --attach      attach to a legacy v2 Hena server                                       [string]
  -p, --password    legacy server password (defaults to HENA_SERVER_PASSWORD)               [string]
  -u, --username    legacy server username (defaults to HENA_SERVER_USERNAME or 'hena')     [string]
      --dir         directory to run in, path on a legacy server if attaching               [string]
      --variant     model variant (provider-specific reasoning effort, e.g., high, max, minimal)
                                                                                            [string]
      --thinking    show thinking blocks                                                   [boolean]
      --auto        auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]"
`;

exports[`hena CLI help-text snapshots every documented command emits stable help text: hena debug --help 1`] = `
"hena debug

debugging and troubleshooting tools

Commands:
  hena debug config        show resolved configuration
  hena debug lsp           LSP debugging utilities
  hena debug rg            ripgrep debugging utilities
  hena debug file          file system debugging utilities
  hena debug scrap         list all known projects
  hena debug skill         list all available skills
  hena debug snapshot      snapshot debugging utilities
  hena debug startup       print startup timing
  hena debug agent <name>  show agent configuration details
  hena debug v2            debug v2 catalog and built-in plugins
  hena debug info          show debug information
  hena debug paths         show global paths (data, config, cache, state)
  hena debug wait          wait indefinitely (for debugging)

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`hena CLI help-text snapshots every documented command emits stable help text: hena providers --help 1`] = `
"hena providers

manage AI providers and credentials

Commands:
  hena providers list               list providers and credentials                     [aliases: ls]
  hena providers login [url]        log in to a provider
  hena providers logout [provider]  log out from a configured provider

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`hena CLI help-text snapshots every documented command emits stable help text: hena agent --help 1`] = `
"hena agent

manage agents

Commands:
  hena agent create  create a new agent
  hena agent list    list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`hena CLI help-text snapshots every documented command emits stable help text: hena upgrade --help 1`] = `
"hena upgrade [target]

upgrade Hena to the latest or a specific version

Positionals:
  target  version to upgrade to, for ex '0.1.48' or 'v0.1.48'                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -m, --method      installation method to use
                          [string] [choices: "curl", "npm", "pnpm", "bun", "brew", "choco", "scoop"]"
`;

exports[`hena CLI help-text snapshots every documented command emits stable help text: hena uninstall --help 1`] = `
"hena uninstall

uninstall Hena and remove all related files

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
  -c, --keep-config  keep configuration files                             [boolean] [default: false]
  -d, --keep-data    keep session data and snapshots                      [boolean] [default: false]
      --dry-run      show what would be removed without removing          [boolean] [default: false]
  -f, --force        skip confirmation prompts                            [boolean] [default: false]"
`;

exports[`hena CLI help-text snapshots every documented command emits stable help text: hena serve --help 1`] = `
"hena serve

start Hena server and web interface

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                      [number] [default: 4096]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: hena.local)
                                                                    [string] [default: "hena.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]"
`;

exports[`hena CLI help-text snapshots every documented command emits stable help text: hena web --help 1`] = `
"hena web

start Hena server and open web interface

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                      [number] [default: 4096]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: hena.local)
                                                                    [string] [default: "hena.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]"
`;

exports[`hena CLI help-text snapshots every documented command emits stable help text: hena models --help 1`] = `
"hena models [provider]

list all available models

Positionals:
  provider  provider ID to filter models by                                                 [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --verbose     use more verbose model output (includes metadata like costs)           [boolean]
      --refresh     refresh the models cache from models.dev                               [boolean]"
`;

exports[`hena CLI help-text snapshots every documented command emits stable help text: hena stats --help 1`] = `
"hena stats

show token usage and cost statistics

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --days        show stats for the last N days (default: all time)                      [number]
      --tools       number of tools to show (default: all)                                  [number]
      --models      show model statistics (default: hidden). Pass a number to show top N, otherwise
                    shows all
      --project     filter by project (default: all projects, empty string: current project)[string]"
`;

exports[`hena CLI help-text snapshots every documented command emits stable help text: hena export --help 1`] = `
"hena export [sessionID]

export session data as JSON

Positionals:
  sessionID  session id to export                                                           [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --sanitize    redact sensitive transcript and file data                              [boolean]"
`;

exports[`hena CLI help-text snapshots every documented command emits stable help text: hena import --help 1`] = `
"hena import <file>

import session data from JSON file or URL

Positionals:
  file  path to JSON file or share URL                                           [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`hena CLI help-text snapshots every documented command emits stable help text: hena github --help 1`] = `
"hena github

manage GitHub agent

Commands:
  hena github run  run the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`hena CLI help-text snapshots every documented command emits stable help text: hena pr --help 1`] = `
"hena pr <number>

fetch and checkout a GitHub PR branch, then run Hena

Positionals:
  number  PR number to checkout                                                  [number] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`hena CLI help-text snapshots every documented command emits stable help text: hena session --help 1`] = `
"hena session

manage sessions

Commands:
  hena session list                list sessions
  hena session delete <sessionID>  delete a session

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`hena CLI help-text snapshots every documented command emits stable help text: hena plugin --help 1`] = `
"hena plugin <module>

install plugin and update config

Positionals:
  module  npm module name                                                        [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -g, --global      install in global config                              [boolean] [default: false]
  -f, --force       replace existing plugin version                       [boolean] [default: false]"
`;

exports[`hena CLI help-text snapshots every documented command emits stable help text: hena db --help 1`] = `
"hena db

database tools

Commands:
  hena db [query]     open an interactive sqlite3 shell or run a query                     [default]
  hena db path        print the database path

Positionals:
  query  SQL query to execute                                                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --format      Output format                 [string] [choices: "json", "tsv"] [default: "tsv"]"
`;
